<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">"Music Freshener"</string>
    <string name="title_section1">Listen To Today</string>
    <string name="title_section2">Add New Music</string>
    <string name="title_section3">Listening History</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_help">Help</string>
    <string name="addMusicGenreLabel">Genre:</string>
    <string name="addMusicAlbumLabel">Album:</string>
    <string name="addMusicArtistLabel">Artist:</string>
    <string name="addMusicRatingLabel">Rating:</string>
    <string name="addMusicDateLabel">Date:</string>
    <string name="addMusicButtonText">Add!</string>
    <string name="whoops">Whoops! Don\'t know how you get here! Use the drawer.</string>

</resources>
